--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 - DOCKER_IMAGE_NAME="q-editor"
 - DOCKER_TAG=$TRAVIS_BRANCH
 script:
-- cd client && npm install && jspm install && gulp export;
+- cd client && npm install && jspm install && gulp export && cd..;
 - docker build -t $DOCKER_IMAGE_NAME:$DOCKER_TAG .;
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; docker tag $DOCKER_IMAGE_NAME:$DOCKER_TAG
   nzzonline/$DOCKER_IMAGE_NAME:$DOCKER_TAG; docker push nzzonline/$DOCKER_IMAGE_NAME:$DOCKER_TAG;
