--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,9 @@
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-plugin-istanbul": "^2.0.3",
-    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-1": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.23.0",
     "browser-sync": "^2.17.5",
     "conventional-changelog": "1.1.0",
     "del": "^2.2.2",
@@ -73,10 +71,6 @@
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.7.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
+    "devDependencies": {}
   }
 }
