--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
       "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-beta.3.0.1",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.1.0",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
@@ -65,8 +66,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.2.0.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
-      "fetch": "github:github/fetch@^1.0.0",
-      "i18next-xhr-backend": "npm:i18next-xhr-backend@^1.3.0",
+      "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
       "leaflet": "npm:leaflet@1.0.3",
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
       "text": "github:systemjs/plugin-text@^0.0.8"
