--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
   "jspm": {
     "dependencies": {
       "ajv": "npm:ajv@^4.11.5",
+      "array2d": "npm:array2d@^0.0.5",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0",
       "aurelia-binding": "npm:aurelia-binding@^1.1.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
@@ -67,6 +68,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.2.0.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
+      "handsontable": "npm:handsontable@^0.32.0-beta1",
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
       "leaflet": "npm:leaflet@1.0.3",
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
