--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,7 @@
       "aurelia-binding": "npm:aurelia-binding@^1.1.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
-      "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-beta.3.0.1",
+      "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-rc.1.0.3",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.1.0",
