--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
       "ajv": "npm:ajv@^4.11.5",
       "array2d": "npm:array2d@^0.0.5",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0",
+      "aurelia-authentication": "npm:aurelia-authentication@^3.6.0",
       "aurelia-binding": "npm:aurelia-binding@^1.1.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
