--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.3.1",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.3",
+      "aurelia-notification": "npm:aurelia-notification@^1.0.0",
       "aurelia-pal": "npm:aurelia-pal@^1.3.0",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.2.1",
       "aurelia-path": "npm:aurelia-path@^1.1.1",
