--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nzz/q-editor",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Q Editor - The editor part of the Q toolbox",
   "homepage": "https://github.com/nzzdev/Q-editor",
   "bugs": {
@@ -15,6 +15,16 @@
     "start": "node index.js"
   },
   "author": "Beni Buess <beni.buess@nzz.ch>",
+  "contributors": [
+    {
+      "name": "Beni Buess",
+      "email": "beni.buess@nzz.ch"
+    },
+    {
+      "name": "Sharon Funke",
+      "email": "sharon.funke@nzz.ch"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "boom": "^4.3.1",
