--- a/client/package.json
+++ b/client/package.json
@@ -64,9 +64,9 @@
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.2.0",
       "aurelia-router": "npm:aurelia-router@^1.2.1",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.2.0",
-      "aurelia-templating": "npm:aurelia-templating@^1.3.0",
+      "aurelia-templating": "npm:aurelia-templating@1.4.2",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.3.0",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.3.1",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@1.4.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.2.0.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
