--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,20 +18,11 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
+      - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-  test:
-    <<: *container_config
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-      - run: npm install
-      - run: npm run test
 
   build-docker:
     <<: *container_config
@@ -41,7 +32,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
-      - run: npm run test
+      - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker build -t nzzdev/q-editor:$CIRCLE_BRANCH .
@@ -53,12 +44,6 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
-      - test:
-          requires:
-            - build
       - build-docker:
           requires:
-            - test
-      - push-docker:
-          requires:
-            - build-docker
+            - build
