--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
+      - run: npm install -g jspm
       - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
       - save_cache:
           paths:
@@ -32,6 +33,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
+      - run: npm install -g jspm
       - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
       - setup_remote_docker:
           docker_layer_caching: true
