--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
-      - run: npm install -g jspm
-      - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
+      - run: cd client && npm install && node_modules/jspm/jspm.js install && gulp lint && gulp export && cd ..;
       - save_cache:
           paths:
             - node_modules
@@ -33,8 +32,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
-      - run: npm install -g jspm
-      - run: cd client && npm install && jspm install && gulp lint && gulp export && cd ..;
+      - run: cd client && npm install && node_modules/jspm/jspm.js install && gulp lint && gulp export && cd ..;
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker build -t nzzdev/q-editor:$CIRCLE_BRANCH .
