--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,11 @@ jobs:
       - run: cd client && npm install && node_modules/jspm/jspm.js install && node_modules/gulp/bin/gulp.js lint && node_modules/gulp/bin/gulp.js export && cd ..;
       - setup_remote_docker:
           docker_layer_caching: true
-      - run: docker build -t nzzdev/q-editor:$CIRCLE_BRANCH .
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker push nzzdev/q-editor:$CIRCLE_BRANCH
+      - run: |
+          TAG=$CIRCLE_BRANCH
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker build -t nzzdev/q-editor:$TAG .
+          docker push nzzdev/q-editor:$TAG
 
 workflows:
   version: 2
