--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.2.0.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
+      "dropzone": "npm:dropzone@^5.2.0",
       "handsontable": "npm:handsontable@^0.32.0-beta1",
       "heyman/leaflet-areaselect": "github:heyman/leaflet-areaselect@master",
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
