--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,15 @@
 {
   "extends": "./node_modules/aurelia-tools/.eslintrc.json",
   "rules": {
-    "indent": [2, 2, { "SwitchCase": 1 }]
+    "indent": [2, 2, { "SwitchCase": 1 }],
+    "padded-blocks": [2, {
+      "blocks": "never",
+      "switches": "never"
+    }],
+    "space-before-function-paren": ["error", {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+    }]
   }
 }
