(chore) fix circleci docker commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,9 @@ jobs:
       - run: |
           TAG=$CIRCLE_BRANCH
           docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker build -t nzzdev/q-editor:$TAG .
-          docker tag nzzdev/q-editor:$TAG
-          docker push nzzdev/q-editor:$TAG
+          docker build -t q-editor:$TAG .
+          docker tag q-editor:$TAG nzzonline/q-editor:$TAG
+          docker push nzzonline/q-editor:$TAG
 
 workflows:
   version: 2
