--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,7 @@
         "anonymous": "never",
         "named": "never",
         "asyncArrow": "always"
-    }]
+    }],
+    "quotes": ["off"]
   }
 }
