--- a/client/package.json
+++ b/client/package.json
@@ -41,34 +41,34 @@
     "dependencies": {
       "ajv": "npm:ajv@^5.3.0",
       "array2d": "npm:array2d@^0.0.5",
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0",
-      "aurelia-authentication": "npm:aurelia-authentication@^3.6.0",
-      "aurelia-binding": "npm:aurelia-binding@^1.1.1",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
-      "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-rc.1.0.3",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.4",
+      "aurelia-authentication": "npm:aurelia-authentication@^3.7.0",
+      "aurelia-binding": "npm:aurelia-binding@^1.6.0",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^2.1.1",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.2",
+      "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-rc.2.0.0",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.1.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.1.0",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
-      "aurelia-i18n": "npm:aurelia-i18n@^2.0.0",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.2.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.1.5",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.1.0",
+      "aurelia-i18n": "npm:aurelia-i18n@2.1.0",
       "aurelia-loader": "npm:aurelia-loader@^1.0.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.1",
-      "aurelia-logging": "npm:aurelia-logging@^1.3.1",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.3",
+      "aurelia-logging": "npm:aurelia-logging@^1.4.0",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.3",
       "aurelia-notification": "npm:aurelia-notification@^1.0.0",
-      "aurelia-pal": "npm:aurelia-pal@^1.3.0",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.2.1",
+      "aurelia-pal": "npm:aurelia-pal@^1.4.0",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.3.1",
       "aurelia-path": "npm:aurelia-path@^1.1.1",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.2.0",
-      "aurelia-router": "npm:aurelia-router@^1.2.1",
-      "aurelia-task-queue": "npm:aurelia-task-queue@^1.2.0",
-      "aurelia-templating": "npm:aurelia-templating@1.4.2",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.3.0",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@1.4.0",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
-      "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.2.0.1",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.2.2",
+      "aurelia-router": "npm:aurelia-router@^1.4.0",
+      "aurelia-task-queue": "npm:aurelia-task-queue@^1.2.1",
+      "aurelia-templating": "npm:aurelia-templating@^1.7.0",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.4.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.5.4",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.2.0",
+      "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.4.0.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.2.0",
       "handsontable": "npm:handsontable@^0.32.0-beta1",
