--- a/client/package.json
+++ b/client/package.json
@@ -76,7 +76,7 @@
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
       "leaflet": "github:Leaflet/Leaflet@1.3.1",
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
-      "leaflet-search": "npm:leaflet-search@^2.3.7",
+      "leaflet-search": "npm:leaflet-search@2.3.7",
       "moment": "npm:moment@2.22.0",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
