Update circleci config to build on github releases (tags which start with v...)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,12 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
+        filters:
+          tags:
+              only: /^v.*/
       - build-docker:
+          filters:
+              tags:
+                  only: /^v.*/
           requires:
             - build
