--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.4.0.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.5.1",
+      "get-value": "npm:get-value@^3.0.1",
       "handsontable": "github:handsontable/handsontable@^3.0.0",
       "heyman/leaflet-areaselect": "github:heyman/leaflet-areaselect@master",
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
@@ -78,6 +79,7 @@
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
       "leaflet-search": "npm:leaflet-search@2.3.7",
       "moment": "npm:moment@2.22.0",
+      "set-value": "npm:set-value@^3.0.0",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
