--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.6.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.3.1",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0-beta.4.0.0",
+      "codemirror": "npm:codemirror@^5.41.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.5.1",
       "get-value": "npm:get-value@^3.0.1",
