replace slash with underscore in docker tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 - npm install
 before_script:
 - DOCKER_IMAGE_NAME="q-editor"
-- DOCKER_TAG=$TRAVIS_BRANCH
+- DOCKER_TAG=${TRAVIS_BRANCH/\//_}
 script:
 - cd client
 - npm install
