--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "aurelia-protractor-plugin": "^1.0.6",
     "aurelia-tools": "^2.0.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^8.2.5",
     "babel-plugin-istanbul": "^5.1.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -12,15 +12,15 @@
     "browser-sync": "^2.24.5",
     "conventional-changelog": "3.0.5",
     "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-bump": "^3.1.1",
     "gulp-changed": "^3.2.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-htmlmin": "^5.0.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-protractor": "4.1.1",
+    "gulp-protractor": "4.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "jasmine-core": "^3.3.0",
     "jspm": "^0.16.47",
@@ -84,5 +84,20 @@
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
+  },
+  "greenkeeper": {
+    "ignore": [
+      "del",
+      "gulp",
+      "gulp-babel",
+      "gulp-bump",
+      "gulp-changed",
+      "gulp-eslint",
+      "gulp-htmlmin",
+      "gulp-notify",
+      "gulp-plumber",
+      "gulp-protractor",
+      "gulp-sourcemaps"
+    ]
   }
 }
