Cache node_modules on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ services:
 language: node_js
 node_js:
   - "9"
+cache:
+  directories:
+    - node_modules
 before_install:
   - npm install -g jspm
   - npm install -g gulp
