--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,7 @@
       "aurelia-binding": "npm:aurelia-binding@^2.3.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^2.3.3",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.4.2",
-      "aurelia-dialog": "npm:aurelia-dialog@^2.0.0-rc.6",
+      "aurelia-dialog": "npm:aurelia-dialog@1",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.3",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.8.2",
       "aurelia-framework": "npm:aurelia-framework@^1.3.1",
