--- a/client/package.json
+++ b/client/package.json
@@ -69,18 +69,16 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.11.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.4.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0",
+      "autocomplete.js": "npm:autocomplete.js@^0.36.0",
       "codemirror": "npm:codemirror@^5.41.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.5.1",
       "file-saver": "npm:file-saver@^2.0.2",
       "get-value": "npm:get-value@^3.0.1",
       "handsontable": "github:handsontable/handsontable@^3.0.0",
-      "heyman/leaflet-areaselect": "github:heyman/leaflet-areaselect@master",
       "i18next": "npm:i18next@9",
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
-      "leaflet": "github:Leaflet/Leaflet@1.3.1",
-      "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
-      "leaflet-search": "npm:leaflet-search@2.3.7",
+      "mapbox-gl": "npm:mapbox-gl@^1.1.1",
       "mixin-deep": "npm:mixin-deep@^2.0.0",
       "moment": "npm:moment@2.22.0",
       "set-value": "npm:set-value@^3.0.0",
