--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
   },
   "jspm": {
     "dependencies": {
+      "@tarekraafat/autocomplete.js": "npm:@tarekraafat/autocomplete.js@^6.1.0",
       "ajv": "npm:ajv@^5.3.0",
       "array2d": "npm:array2d@^0.0.5",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.4",
@@ -69,7 +70,6 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.11.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.4.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0",
-      "autocomplete.js": "npm:autocomplete.js@^0.36.0",
       "codemirror": "npm:codemirror@^5.41.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.5.1",
