--- a/client/package.json
+++ b/client/package.json
@@ -81,9 +81,11 @@
       "leaflet": "github:Leaflet/Leaflet@1.3.1",
       "leaflet-geocoder-mapzen": "npm:leaflet-geocoder-mapzen@1.8.0",
       "leaflet-search": "npm:leaflet-search@2.3.7",
+      "mime-db": "npm:mime-db@^1.41.0",
       "mixin-deep": "npm:mixin-deep@^2.0.0",
       "moment": "npm:moment@2.22.0",
       "set-value": "npm:set-value@^3.0.0",
+      "slugify": "npm:slugify@^1.3.5",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
