--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
     "browser-sync": "^2.26.7",
     "conventional-changelog": "3.1.10",
     "del": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-bump": "^3.1.3",
     "gulp-changed": "^4.0.1",
     "gulp-eslint": "^6.0.0",
@@ -36,6 +36,12 @@
     "run-sequence": "^2.2.1",
     "vinyl-paths": "^3.0.0",
     "yargs": "^14.0.0"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "gulp",
+      "gulp-babel"
+    ]
   },
   "jspm": {
     "dependencies": {
