--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,6 @@
   "jspm": {
     "dependencies": {
       "@mapbox/mapbox-gl-draw": "npm:@mapbox/mapbox-gl-draw@^1.1.2",
-      "@tarekraafat/autocomplete.js": "npm:@tarekraafat/autocomplete.js@^7.0.3",
       "@turf/bbox": "npm:@turf/bbox@^6.0.1",
       "@turf/bbox-polygon": "npm:@turf/bbox-polygon@^6.0.1",
       "@turf/helpers": "npm:@turf/helpers@^6.1.4",
@@ -82,6 +81,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.11.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.4.0",
       "aurelia-testing": "npm:aurelia-testing@^1.0.0",
+      "autocompleter": "npm:autocompleter@^6.0.1",
       "codemirror": "npm:codemirror@^5.41.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "dropzone": "npm:dropzone@^5.5.1",
