Use patched version of handsontable

--- a/client/package.json
+++ b/client/package.json
@@ -87,7 +87,7 @@
       "dropzone": "npm:dropzone@^5.5.1",
       "file-saver": "npm:file-saver@^2.0.2",
       "get-value": "npm:get-value@^3.0.1",
-      "handsontable": "github:handsontable/handsontable@^6.2.2",
+      "handsontable": "github:nzzdev/handsontable@6.2.2-fix-excel-copy-paste",
       "i18next": "npm:i18next@9",
       "i18next-fetch-backend": "npm:i18next-fetch-backend@^0.0.1",
       "mapbox-gl": "npm:mapbox-gl@^1.1.1",
