--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -2,15 +2,22 @@
   "extends": "./node_modules/aurelia-tools/.eslintrc.json",
   "rules": {
     "indent": [2, 2, { "SwitchCase": 1 }],
-    "padded-blocks": [2, {
-      "blocks": "never",
-      "switches": "never"
-    }],
-    "space-before-function-paren": ["error", {
+    "padded-blocks": [
+      2,
+      {
+        "blocks": "never",
+        "switches": "never"
+      }
+    ],
+    "space-before-function-paren": [
+      "error",
+      {
         "anonymous": "never",
         "named": "never",
         "asyncArrow": "always"
-    }],
-    "quotes": ["off"]
+      }
+    ],
+    "quotes": ["off"],
+    "comma-dangle": ["error", "only-multiline"]
   }
 }
