--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "jasmine-core": "^3.5.0",
     "jspm": "^0.16.55",
+    "jspm-github": "^0.13.21",
     "karma": "^4.3.0",
     "karma-babel-preprocessor": "^8.0.1",
     "karma-chrome-launcher": "^3.1.0",
